[gd_scene load_steps=2 format=3 uid="uid://clic2sxpgckx3"]

[ext_resource type="Script" path="res://enemy_waves/wave_1.gd" id="1_e3rar"]

[node name="Wave1" type="Node2D"]
script = ExtResource("1_e3rar")

[node name="RoundTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyCollectionNode" type="Node" parent="."]

[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
